--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "First_Project.sln"
+    "dotnet.defaultSolution": "GAME_1343_SecondProject.sln"
 }
